# actix-web-and-yew-test

./: README.md
backend/: Cargo.toml
backend/src/: database.rs  main.rs
frontend/: .gitignore  Cargo.toml
frontend/src/: main.rs
