[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo = "0.8"
reqwasm = "0.5"
wasm-bindgen-futures = "0.4"
yew = {version = "0.20", features = ["csr"]}
serde = { version = "1.0", features = ["derive"] }
gloo-console = "0.2"
